[project]
name = "orion-jax"
version = "0.1.0"
description = "A NN star remover"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.10.5",
    "ipywidgets>=8.1.6",
    "jax[cuda12]>=0.6.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.12",
    "pillow>=11.2.1",
    "tifffile>=2025.3.30",
    "tqdm>=4.67.1",
]
